# homefin_agent

./: .env.example  .gitignore  AGENT.md  Makefile  README.md  alembic.ini  pyproject.toml
adapters/importers/: __init__.py  base.py  registry.py  simple_bank_csv.py  wechat_csv.py
adapters/openclaw/: __init__.py  gateway_client.py
application/dto/: __init__.py  account.py  analytics.py  audit.py  auth.py  budget.py  category.py  chat.py  household.py  identity.py  import_job.py  transaction.py
application/services/: access_service.py  account_app_service.py  agent_tool_service.py  analytics_app_service.py  auth_service.py  budget_app_service.py  category_app_service.py  chat_app_service.py  errors.py  household_app_service.py  identity_binding_service.py  import_app_service.py  transaction_app_service.py
apps/api/: dependencies.py  exception_handlers.py  lifespan.py  main.py
apps/api/routers/: accounts.py  analytics.py  auth.py  budgets.py  categories.py  chat.py  households.py  (+2 more)
apps/mcp/: server.py
apps/worker/: worker.py
domain/entities/: contracts.py
domain/enums/: __init__.py  account.py  identity.py  transaction.py
domain/value_objects/: __init__.py  dedupe_key.py  normalized_transaction.py
infra/config/: settings.py
infra/db/: models.py  repositories.py  session.py
integrations/openclaw/: .mcp.json  README.md  openclaw.plugin.json
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
tests/: conftest.py
tests/integration/: test_api.py  test_worker_and_bundle.py
tests/unit/: test_agent_tools.py  test_importers.py
(+8 files in other folders)
